examples/test/testpolicy7164.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7164
  namespace: namespace256
spec:
  podSelector:
    matchLabels:
      key9: value26
      key10: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value3
          key7: value40
          key16: value17
      podSelector:
        matchLabels:
          key35: value41
          key44: value23
